coreloop/core_loop.h

/***************** UNAVOIDABLE GLOBAL STATE ******************/
// flag to tell main we are doing a soft reset
extern bool soft_reset_flag;
// tap counter increased in the interrupt
extern volatile uint64_t tap_counter;
// TVS sensors averaged in timer interrupt
extern volatile uint32_t TVS_sensors_avg[4];
// loop count in timer interrupt
extern volatile uint16_t loop_count_min, loop_count_max;
// note that gain auto is missing here, since these are actual spectrometer set gains
enum gain_state{
    GAIN_LOW,
    GAIN_MED,
    GAIN_HIGH,
    GAIN_DISABLE,
    GAIN_AUTO};
enum output_format {
    OUTPUT_32BIT,
    OUTPUT_16BIT_UPDATES,
    OUTPUT_16BIT_FLOAT1,
    OUTPUT_16BIT_10_PLUS_6,
    OUTPUT_16BIT_4_TO_5,
    OUTPUT_16BIT_SHARED_LZ
};
enum averaging_mode {
    AVG_INT32,
    AVG_INT_40_BITS,
    AVG_FLOAT
};
// core state cointains the seuqencer state and the base state and a number of utility variables
struct core_state {
    struct core_state_base base;
    struct cdi_stats cdi_stats;
    struct calibrator_state cal;
    // A number be utility values
    struct delayed_cdi_sending cdi_dispatch;
    struct time_counters timing;
    struct watchdog_config watchdog;
    uint16_t cdi_wait_spectra;
    uint16_t avg_counter;
    uint32_t unique_packet_id;
    uint8_t leading_zeros_min[NSPECTRA];
    uint8_t leading_zeros_max[NSPECTRA];
    uint8_t housekeeping_request;
    uint8_t range_adc, resettle, request_waveform, request_eos;
    bool tick_tock;
    bool drop_df;
    uint32_t heartbeat_packet_count;
    int8_t flash_slot;
    uint8_t cmd_arg_high[CMD_BUFFER_SIZE], cmd_arg_low[CMD_BUFFER_SIZE];
    // pointeres to the beginning and end of commands, also used during sequence upload
    uint16_t cmd_ptr, cmd_end;
    // are we uploading -- if so block sequences
    bool sequence_upload;
    // for loops
    uint8_t loop_depth; // how many nested loops
    uint16_t loop_start[MAX_LOOPS];
    uint8_t loop_count[MAX_LOOPS];
    uint32_t cmd_counter;
    uint16_t dispatch_delay; // number of timer interrupts to wait before sending CDI
    uint16_t reg_address; // address of the register to be written (for commands that do that)
    int32_t reg_value; // value to be written to the register
    int8_t bitslicer_action_counter;  // counting how many times in a row we have changed bit slicer to prevent infinite loop
    uint32_t fft_time;
    bool fft_computed;
};
//extern struct core_state state;
extern bool soft_reset_flag;
// main function
void core_loop(struct core_state*);
// CRC
uint32_t CRC(const void* data, size_t size);