coreloop/calibrator.h

struct calibrator_state {
    uint8_t mode; // this is the actual model of calibrator. If >4 we are in various auto modes
    uint8_t Navg2, Navg3; // averaging for calibrator
    uint8_t drift_guard, drift_step; // drift guard and step
    uint8_t antenna_mask;
    uint8_t notch_index;
    uint32_t SNRon, SNRoff;
    uint32_t Nsettle, delta_drift_corA, delta_drift_corB; 
    uint32_t ddrift_guard, gphase_guard;
    uint16_t pfb_index; // for PFB and spectral zoom mode
    // for saving weights
    uint16_t weight_ndx; // weight index when storing weights
    bool auto_slice;
    uint8_t powertop_slice;
    uint8_t delta_powerbot_slice;
    uint8_t sum1_slice, sum2_slice, fd_slice, sd2_slice;
    uint8_t prod1_slice, prod2_slice;
    uint32_t errors, bitslicer_errors;
    uint8_t zoom_ch1, zoom_ch2;
    uint8_t zoom_Nfft;
    uint8_t zoom_prod;
    uint8_t zoom_Navg;
    uint8_t zoom_avg_idx;
    bool use_float_fft;
    uint8_t raw11_every, raw11_counter; //  we output raw11 every raw11_every time. 
};
struct calibrator_metadata {
  uint16_t version; 
  uint32_t unique_packet_id;
  uint32_t time_32;
  uint16_t time_16;
  uint16_t have_lock[4];
  uint32_t SNRon, SNRoff;
  uint32_t SNR_max[4], SNR_min[4];
  uint32_t ptop_max[4], ptop_min[4];
  uint32_t pbot_max[4], pbot_min[4];
  int32_t FD_max[4], FD_min[4];
  int32_t SD_max[4], SD_min[4];
  int32_t drift [1024];
  uint32_t error_regs [30];  
  
  
  uint8_t powertop_slice;
  uint8_t sum1_slice, sum2_slice, fd_slice, sd2_slice;
  uint8_t prod1_slice, prod2_slice;
  uint32_t errors, bitslicer_errors;
};
void set_calibrator(struct calibrator_state* cal);
void calibrator_set_SNR(struct calibrator_state* cal);
void calibrator_slice_init(struct calibrator_state* cal);
void calibrator_set_slices(struct calibrator_state* cal);
struct calibrator_metadata* process_cal_mode11(struct core_state* state);