pycoreloop/core_loop.py


        result = self._ld_so_cache.get(libname, set())
        for i in result:
            # we iterate through all found paths for library, since we may have
            # actually found multiple architectures or other library types that
            # may not load
            yield i


# Windows


class WindowsLibraryLoader(LibraryLoader):
    name_formats = ["%s.dll", "lib%s.dll", "%slib.dll", "%s"]

    class Lookup(LibraryLoader.Lookup):
        def __init__(self, path):
            super(WindowsLibraryLoader.Lookup, self).__init__(path)
            self.access["stdcall"] = ctypes.windll.LoadLibrary(path)


# Platform switching

# If your value of sys.platform does not appear in this dict, please contact
# the Ctypesgen maintainers.

loaderclass = {
    "darwin": DarwinLibraryLoader,
    "cygwin": WindowsLibraryLoader,
    "win32": WindowsLibraryLoader,
    "msys": WindowsLibraryLoader,
}

load_library = loaderclass.get(sys.platform, PosixLibraryLoader)()


def add_library_search_dirs(other_dirs):
    """
    Add libraries to search paths.
    If library paths are relative, convert them to absolute with respect to this
    file's directory
    """
    for F in other_dirs:
        if not os.path.isabs(F):
            F = os.path.abspath(F)
        load_library.other_dirs.append(F)


del loaderclass

# End loader

add_library_search_dirs([])

# No libraries

# No modules

# /home/anigmetov/code/coreloop/coreloop/spectrometer_interface.h: 47
class struct_ADC_stat(Structure):
    pass

struct_ADC_stat._pack_ = 1
struct_ADC_stat.__slots__ = [
    'min',
    'max',
    'valid_count',
    'invalid_count_max',
    'invalid_count_min',
    'sumv',
    'sumv2',
]
struct_ADC_stat._fields_ = [
    ('min', c_int16),
    ('max', c_int16),
    ('valid_count', c_uint32),
    ('invalid_count_max', c_uint32),
    ('invalid_count_min', c_uint32),
    ('sumv', c_uint64),
    ('sumv2', c_uint64),
]

# /home/anigmetov/code/coreloop/coreloop/calibrator.h: 36
class struct_calibrator_state(Structure):
    pass

struct_calibrator_state._pack_ = 1
struct_calibrator_state.__slots__ = [
    'mode',
    'Navg2',
    'Navg3',
    'drift_guard',
    'drift_step',
    'antenna_mask',
    'notch_index',
    'SNRon',
    'SNRoff',
    'Nsettle',
    'delta_drift_corA',
    'delta_drift_corB',
    'ddrift_guard',
    'gphase_guard',
    'pfb_index',
    'weight_ndx',
    'auto_slice',
    'powertop_slice',
    'delta_powerbot_slice',
    'sum1_slice',
    'sum2_slice',
    'sd2_slice',
    'prod1_slice',
    'prod2_slice',
    'errors',
    'zoom_ch1',
    'zoom_ch2',
    'zoom_Nfft',
    'zoom_prod',
    'zoom_Navg',
]
struct_calibrator_state._fields_ = [
    ('mode', c_uint8),
    ('Navg2', c_uint8),
    ('Navg3', c_uint8),
    ('drift_guard', c_uint8),
    ('drift_step', c_uint8),
    ('antenna_mask', c_uint8),
    ('notch_index', c_uint8),
    ('SNRon', c_uint32),
    ('SNRoff', c_uint32),
    ('Nsettle', c_uint32),
    ('delta_drift_corA', c_uint32),
    ('delta_drift_corB', c_uint32),
    ('ddrift_guard', c_uint32),
    ('gphase_guard', c_uint32),
    ('pfb_index', c_uint16),
    ('weight_ndx', c_uint16),
    ('auto_slice', c_bool),
    ('powertop_slice', c_uint8),
    ('delta_powerbot_slice', c_uint8),
    ('sum1_slice', c_uint8),
    ('sum2_slice', c_uint8),
    ('sd2_slice', c_uint8),
    ('prod1_slice', c_uint8),
    ('prod2_slice', c_uint8),
    ('errors', c_uint32),
    ('zoom_ch1', c_uint8),
    ('zoom_ch2', c_uint8),
    ('zoom_Nfft', c_uint8),
    ('zoom_prod', c_uint8),
    ('zoom_Navg', c_uint8),
]

# /home/anigmetov/code/coreloop/coreloop/calibrator.h: 62
class struct_calibrator_metadata(Structure):
    pass

struct_calibrator_metadata._pack_ = 1
struct_calibrator_metadata.__slots__ = [
    'version',
    'unique_packet_id',
    'time_32',
    'time_16',
    'have_lock',
    'state',
    'SNR_max',
    'SNR_min',
    'drift',
    'error_regs',
]
struct_calibrator_metadata._fields_ = [
    ('version', c_uint16),
    ('unique_packet_id', c_uint32),
    ('time_32', c_uint32),
    ('time_16', c_uint16),
    ('have_lock', c_uint16 * int(4)),
    ('state', struct_calibrator_state),
    ('SNR_max', c_int * int(4)),
    ('SNR_min', c_int * int(4)),
    ('drift', c_int32 * int(1024)),
    ('error_regs', c_uint32 * int(30)),
]

# /home/anigmetov/code/coreloop/coreloop/calibrator.h: 75
class struct_saved_calibrator_weights(Structure):
    pass

struct_saved_calibrator_weights._pack_ = 1
struct_saved_calibrator_weights.__slots__ = [
    'in_use',
    'CRC',
    'weights',
]
struct_saved_calibrator_weights._fields_ = [
    ('in_use', c_uint32),
    ('CRC', c_uint32),
    ('weights', c_uint16 * int(512)),
]

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 159
class struct_core_state(Structure):
    pass

# /home/anigmetov/code/coreloop/coreloop/calibrator.h: 84
for _lib in _libs.values():
    if not _lib.has("set_calibrator", "cdecl"):
        continue
    set_calibrator = _lib.get("set_calibrator", "cdecl")
    set_calibrator.argtypes = [POINTER(struct_calibrator_state)]
    set_calibrator.restype = None
    break

# /home/anigmetov/code/coreloop/coreloop/calibrator.h: 85
for _lib in _libs.values():
    if not _lib.has("calibrator_set_SNR", "cdecl"):
        continue
    calibrator_set_SNR = _lib.get("calibrator_set_SNR", "cdecl")
    calibrator_set_SNR.argtypes = [POINTER(struct_calibrator_state)]
    calibrator_set_SNR.restype = None
    break

# /home/anigmetov/code/coreloop/coreloop/calibrator.h: 86
for _lib in _libs.values():
    if not _lib.has("calibrator_slice_init", "cdecl"):
        continue
    calibrator_slice_init = _lib.get("calibrator_slice_init", "cdecl")
    calibrator_slice_init.argtypes = [POINTER(struct_calibrator_state)]
    calibrator_slice_init.restype = None
    break

# /home/anigmetov/code/coreloop/coreloop/calibrator.h: 87
for _lib in _libs.values():
    if not _lib.has("calibrator_set_slices", "cdecl"):
        continue
    calibrator_set_slices = _lib.get("calibrator_set_slices", "cdecl")
    calibrator_set_slices.argtypes = [POINTER(struct_calibrator_state)]
    calibrator_set_slices.restype = None
    break

# /home/anigmetov/code/coreloop/coreloop/calibrator.h: 88
for _lib in _libs.values():
    if not _lib.has("process_cal_mode11", "cdecl"):
        continue
    process_cal_mode11 = _lib.get("process_cal_mode11", "cdecl")
    process_cal_mode11.argtypes = [POINTER(struct_core_state)]
    process_cal_mode11.restype = POINTER(struct_calibrator_metadata)
    break

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 31
for _lib in _libs.values():
    try:
        soft_reset_flag = (c_bool).in_dll(_lib, "soft_reset_flag")
        break
    except:
        pass

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 33
for _lib in _libs.values():
    try:
        tap_counter = (c_uint64).in_dll(_lib, "tap_counter")
        break
    except:
        pass

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 35
for _lib in _libs.values():
    try:
        TVS_sensors_avg = (c_uint32 * int(4)).in_dll(_lib, "TVS_sensors_avg")
        break
    except:
        pass

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 37
for _lib in _libs.values():
    try:
        loop_count_min = (c_uint16).in_dll(_lib, "loop_count_min")
        break
    except:
        pass

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 37
for _lib in _libs.values():
    try:
        loop_count_max = (c_uint16).in_dll(_lib, "loop_count_max")
        break
    except:
        pass

enum_gain_state = c_int# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 41

GAIN_LOW = 0# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 41

GAIN_MED = (GAIN_LOW + 1)# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 41

GAIN_HIGH = (GAIN_MED + 1)# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 41

GAIN_DISABLE = (GAIN_HIGH + 1)# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 41

GAIN_AUTO = (GAIN_DISABLE + 1)# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 41

enum_output_format = c_int# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 48

OUTPUT_32BIT = 0# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 48

OUTPUT_16BIT_UPDATES = (OUTPUT_32BIT + 1)# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 48

OUTPUT_16BIT_FLOAT1 = (OUTPUT_16BIT_UPDATES + 1)# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 48

OUTPUT_16BIT_10_PLUS_6 = (OUTPUT_16BIT_FLOAT1 + 1)# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 48

OUTPUT_16BIT_4_TO_5 = (OUTPUT_16BIT_10_PLUS_6 + 1)# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 48

OUTPUT_16BIT_SHARED_LZ = (OUTPUT_16BIT_4_TO_5 + 1)# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 48

enum_averaging_mode = c_int# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 57

AVG_INT32 = 0# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 57

AVG_INT_40_BITS = (AVG_INT32 + 1)# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 57

AVG_FLOAT = (AVG_INT_40_BITS + 1)# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 57

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 64
class struct_route_state(Structure):
    pass

struct_route_state._pack_ = 1
struct_route_state.__slots__ = [
    'plus',
    'minus',
]
struct_route_state._fields_ = [
    ('plus', c_uint8),
    ('minus', c_uint8),
]

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 68
class struct_time_counters(Structure):
    pass

struct_time_counters._pack_ = 1
struct_time_counters.__slots__ = [
    'heartbeat_counter',
    'resettle_counter',
    'cdi_wait_counter',
    'cdi_dispatch_counter',
]
struct_time_counters._fields_ = [
    ('heartbeat_counter', c_uint64),
    ('resettle_counter', c_uint64),
    ('cdi_wait_counter', c_uint64),
    ('cdi_dispatch_counter', c_uint64),
]

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 78
class struct_core_state_base(Structure):
    pass
